--- a/web/src/app.module.scss
+++ b/web/src/app.module.scss
@@ -44,6 +44,7 @@
 
   // Forms
   --form-field-bg: #ebebeb;
+  --form-group-bg: #ebebeb;
   --form-field-text-colour: #4d4d4d;
 
   // Syntax highlighting
@@ -72,6 +73,7 @@
 
     // Forms
     --form-field-bg: #141414;
+    --form-group-bg: #2e2e2e;
     --form-field-text-colour: #f7f7f7;
 
     // Syntax highlighting
